--- a/docs/style.css
+++ b/docs/style.css
@@ -61,3 +61,12 @@ svg{
         margin-bottom: 2rem;
     }
   }
+
+  @media only screen and (max-width: 477px) {
+   h1{
+       font-size: 2rem;
+   }
+   .subheading{
+       font-size: 1rem;
+   }
+  }
