--- a/docs/style.css
+++ b/docs/style.css
@@ -57,10 +57,10 @@ svg{
 }
 
 @media only screen and (max-width: 1000px) {
-/*     .brand-name{
+    .brand-name{
         margin-bottom: 4rem;
     }
-  } */
+  }
 
   @media only screen and (max-width: 477px) {
    h1{
